objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Cultural_Fit__c</fullName>
        <inlineHelpText>Please enter a value between 1 and 10. 1 being the least and 10 being the best.</inlineHelpText>
        <label>Cultural Fit</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Job_Application__r.Position__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Score__c</fullName>
        <inlineHelpText>Please enter a score between 1 and 10. 1 being the least and 10 being the best.</inlineHelpText>
        <label>Technical Score</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>